# mcp-pharmacogenomics

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
paper/: make_figure.py  paper.bib  paper.md  paper_preview.html
src/pgx_mcp/: __init__.py  config.py  server.py
src/pgx_mcp/clients/: __init__.py  base.py  clinical_trials.py  clinvar.py  gnomad.py  opentargets.py  pharmgkb.py
src/pgx_mcp/prompts/: __init__.py  consultation.py
src/pgx_mcp/resources/: __init__.py  references.py
src/pgx_mcp/tools/: __init__.py  clinical_trials.py  drug.py  guideline.py  population.py  report.py  variant.py
tests/: conftest.py
tests/fixtures/clinical_trials/: studies_pharmacogenomics.json
tests/fixtures/clinvar/: esearch_cyp2d6.json  esummary_variant.json
tests/fixtures/gnomad/: variant_rs3892097.json
tests/fixtures/opentargets/: drug_codeine.json  search_drug_codeine.json
tests/fixtures/pharmgkb/: chemical_codeine.json  clinical_annotation_cyp2d6.json  guideline_cpic_cyp2d6_codeine.json  guideline_detail.json  search_chemicals_codeine.json
tests/test_clients/: test_base.py  test_clinical_trials.py  test_clinvar.py  test_gnomad.py  test_opentargets.py  test_pharmgkb.py
tests/test_tools/: test_clinical_trials_tools.py  test_drug_tools.py  test_guideline_tools.py  test_population_tools.py  test_report_tools.py  test_variant_tools.py
