[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pgx-mcp"
version = "0.1.0"
description = "MCP server for pharmacogenomics — real-time access to ClinVar, PharmGKB, gnomAD, OpenTargets, and clinical trials from Claude"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Julius Schmidt" },
]
keywords = [
    "mcp",
    "pharmacogenomics",
    "pgx",
    "cpic",
    "pharmgkb",
    "clinvar",
    "gnomad",
    "opentargets",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp[cli]>=1.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cachetools>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.10",
]

[project.scripts]
pgx-mcp = "pgx_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Julius-Schmidt/mcp-pharmacogenomics"
Repository = "https://github.com/Julius-Schmidt/mcp-pharmacogenomics"
Issues = "https://github.com/Julius-Schmidt/mcp-pharmacogenomics/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pgx_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: MCP protocol-level integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
